# SPASSO

./: .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  README.txt  check_modules.py  config.ini  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
Cruises/WMedSeaExample/: config_WMedSeaExample.ini  config_WMedSeaExampleDT.ini
Cruises/WMedSeaExample/.ipynb_checkpoints/: config_WMedSeaExample-checkpoint.ini  config_WMedSeaExampleDT-checkpoint.ini
Cruises/WMedSeaExample/Bulletin/: WMedSeaExample_bulletin20230405.tex
Cruises/WMedSeaExample/Figures/kmz/: 20230405_Copernicus_SSS_L4_0.kmz  20230410_Copernicus_SST_L4_0.kmz  20230411_Copernicus_PHY_0.kmz  20230411_FTLE_Copernicus_PHY_0.kmz
Cruises/WMedSeaExample/Processed/: 20230330_CLS_PHY.nc  20230402_CLS_CHL_5d.nc  20230403_CLS_SST_5d.nc  20230403_CLS_SST_7d.nc  20230404_CLS_CHL.nc  20230404_CLS_CHL_10d.nc  20230404_CLS_SST.nc  20230405_FTLE_Copernicus_PHY.nc
Cruises/WMedSeaExample/Wrk/: 20230409_Copernicus_CHL_L4_0.kmz  20230411_FTLE_Copernicus_PHY.nc  20230411_KE_Copernicus_PHY_0.kmz  20230411_OW_Copernicus_PHY_0.kmz  WMedSeaExample_bulletin20230411.tex
Doc/: TUTORIALS.md
docs/: README.md
src/: Bulletin.py  Diagnostics.py  Fields.py  Functions.py  GlobalVars.py  Library.py  PlotField.py  Spasso.py  colormaps.py
src/.ipynb_checkpoints/: Diagnostics-checkpoint.py
