[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SPASSO"
description = "Package to map satellite-derived ocean state to guide oceanographic cruises."
readme = "README.md"
dynamic = ["version"]
authors = [{name = "L. Rousselet, L. Izard"}]
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Linux, MacOS",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
]
dependencies = [
"termcolor",
"pandas 2.2.2",
"netCDF4 1.5.8",
"matplotlib 3.5.2",
"cmocean 2.0",
"scipy 1.13.1",
"xarray 2024.3.0",
"basemap",
"basemap-data-hires",
"tabulate 0.9.0",
"simplekml 1.3.2",
"requests 2.31.0",
"importlib-metadata",
"pylatex 1.4.1",
"copernicusmarine 2.0.0",
"motuclient",
"cblind 2.3.1",
]

[project.urls]
homepage = "https://spasso.mio.osupytheas.fr/"
repository = "https://github.com/OceanCruises/SPASSO"
